completed input, debugging in progress

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="Gram">
   <head>
     <title>Angular</title>
     <link rel="stylesheet" href="style.css" />
@@ -11,5 +11,9 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+    <h1>WDIstagram</h1>
+    <div ui-view>
+
+    </div>
   </body>
 </html>
