--- a/js/ng-views/edit.html
+++ b/js/ng-views/edit.html
@@ -1,7 +1,7 @@
 <h3>Edit a 'gram</h3>
 <div>
-  <input type="text" value="vm.newGramPhotoUrl" ng-model="vm.newGramPhotoUrl">
-  <input type="text" value="vm.newGramAuthor" ng-model="vm.newGramAuthor">
-  <input type="text" value="vm.newGramBody" ng-model="vm.newGramBody">
-  <button ng-click="vm.addGram()">Edit 'gram</button>
+  <input type="text" value="vm.gram.photo_url" ng-model="vm.gram.photo_url">
+  <input type="text" value="vm.gram.author" ng-model="vm.gram.author">
+  <input type="text" value="vm.gram.body" ng-model="vm.gram.body">
+  <button ng-click="vm.update()">Edit 'gram</button>
 </div>
