--- a/js/ng-views/index.html
+++ b/js/ng-views/index.html
@@ -2,3 +2,4 @@
 <div ng-repeat="gram in vm.grams">
   <p><a ui-sref="gramShow({id: $index})">{{gram.body}}</a></p>
 </div>
+<a ui-sref="gramNew">New Gram</a>
