--- a/js/ng-views/new.html
+++ b/js/ng-views/new.html
@@ -1,7 +1,7 @@
 <h3>Add a 'gram</h3>
 <div>
-  <input type="text" placeholder="Photo Url" ng-model="vm.newGramPhotoUrl">
-  <input type="text" placeholder="Author" ng-model="vm.newGramAuthor">
-  <input type="text" placeholder="Caption" ng-model="vm.newGramBody">
-  <button ng-click="vm.addGram()">Add 'gram</button>
+  <input type="text" placeholder="Photo Url" ng-model="vm.gram.photo_url">
+  <input type="text" placeholder="Author" ng-model="vm.gram.author">
+  <input type="text" placeholder="Caption" ng-model="vm.gram.body">
+  <button ng-click="vm.create()">Add 'gram</button>
 </div>
